Fix to help with anchors covered by sticky header

--- a/franchises/dfv/src/modules/content/css/global.scss
+++ b/franchises/dfv/src/modules/content/css/global.scss
@@ -22,6 +22,15 @@
     }
 }
 
+h2:before {
+    content: '';
+    display: block;
+    height: 5em;
+    margin-top: -5em;
+    position: relative;
+    width: 0;
+}
+
 .dfv-page-introduction {
     padding: 0 5px;
 
